--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+        <testng></testng>
     </properties>
 
     <build>
@@ -23,7 +23,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>regression.xml</suiteXmlFile>
+                        <suiteXmlFile>m.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
