--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>m.xml</suiteXmlFile>
+                        <suiteXmlFile>${testng}.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
